[package]
edition = "2021"
name = "reqwest_fetch"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["full"] }
napi-derive = "2.16"
regex = "1.10"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls", "gzip", "deflate", "brotli"] }


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
